hphp/test/slow/object_property/704.php.expectf
HipHop Warning: Creating default object from empty value in %s/test/slow/object_property/704.php on line 4
HipHop Fatal error: Cannot access property started with '\0' in %s/test/slow/object_property/704.php on line 4
